Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 
 <p>Pointerly is a framework to help with the creation of experiments which involve using pointers. It provides functionality to complete tasks including displaying shapes on the screen, handling events such as clicks, and keeping track of mouse position.</p>
 
-<p>It is able to keep track of the state of the experiment throughout, including mouse positions, mouse clicks, screen size, and shapes that are displayed on the screen. This logged data can be replayed, allowing an experiment run to be watched back at a later point. With a correctly set up browser, collected data is stored on the file system of the machine, removing any need to remember to move data around between experiment participants.</p>
+<p>It is able to keep track of the state of the experiment throughout, including mouse positions, mouse clicks, screen size, and shapes that are displayed on the screen. This logged data can be replayed, allowing an experiment run to be watched back at a later point. With a correctly set up <a href="#best-browser">browser</a>, collected data is stored on the file system of the machine, removing any need to remember to move data around between experiment participants.</p>
 
-<h2>How to best obtain and collect data</h2>
+<p><a></a>## How to best obtain and collect data</p>
 
 <ul>
 <li>Use a <a href="http://caniuse.com/#search=navigation%20timing">browser that includes high resolution timing</a>
