--- a/index.html
+++ b/index.html
@@ -1,33 +1,36 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Pointerly by hayfield</title>
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="Pointerly : A framework for testing things using pointers." />
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>Pointerly</title>
   </head>
+
   <body>
-    <div class="wrapper">
-      <header>
-        <h1>Pointerly</h1>
-        <p>A framework for testing things using pointers.</p>
 
-        <p class="view"><a href="https://github.com/hayfield/pointerly">View the Project on GitHub <small>hayfield/pointerly</small></a></p>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/hayfield/pointerly">View on GitHub</a>
 
+          <h1 id="project_title">Pointerly</h1>
+          <h2 id="project_tagline">A framework for testing things using pointers.</h2>
 
-        <ul>
-          <li><a href="https://github.com/hayfield/pointerly/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/hayfield/pointerly/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/hayfield/pointerly">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/hayfield/pointerly/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/hayfield/pointerly/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <h1>Pointerly</h1>
 
 <p>A framework for testing things using pointers.</p>
@@ -36,7 +39,8 @@
 
 <p>It is able to keep track of the state of the experiment throughout, including mouse positions, mouse clicks, screen size, and shapes that are displayed on the screen. This logged data can be replayed, allowing an experiment run to be watched back at a later point. With a correctly set up <a href="#best-browser">browser</a>, collected data is stored on the file system of the machine, removing any need to remember to move data around between experiment participants.</p>
 
-<p><a></a>## How to best obtain and collect data</p>
+<h2>
+<a></a>How to best obtain and collect data</h2>
 
 <ul>
 <li>Use a <a href="http://caniuse.com/#search=navigation%20timing">browser that includes high resolution timing</a>
@@ -52,12 +56,17 @@
 
 <p>Documentation can be found within the <code>docs/</code> folder. Reading through the source code can also help clarify issues if the documentation is missing something.</p>
       </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/hayfield">hayfield</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Pointerly maintained by <a href="https://github.com/hayfield">hayfield</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
+
     
+
   </body>
 </html>
